--- a/Bibliotheque/Bibliotheque.vcxproj.filters
+++ b/Bibliotheque/Bibliotheque.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="..\JeuVersion0\Personnage.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\JeuVersion0\pugixml\src\pugixml.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="monMain.h">
